# prefect-workflow

./: .gitignore
dqx/: Dockerfile  payload.json  prefect.yaml  pyproject.toml
dqx/common/: AnalyzePrice.py  DQXEditDiary.py  DQXPriceSearch.py  DatetimeTranslator.py  discord_notify.py  exceptions.py  get_cheap_item_list.py  get_hourly_price.py  get_price_graph.py  get_recaptcha.py  login_dqx.py  session_cookies.py  summarize_price.py  trino_api.py
dqx/create_llm_erudition_message/: create_llm_erudition_message.py
dqx/create_llm_message/: create_llm_message.py
dqx/discord_price_bot/: Dockerfile  deployment.yaml  discord_price_bot.py
dqx/get_item_hash_hiroba/: get_item_hash.py
dqx/get_itemname/: get_itemname.py
dqx/get_momon_bazzar/: get_momon_bazzar.py
dqx/get_price/: get_price.py
dqx/get_price_mart/: dbt_project.yml  get_price_mart.py
dqx/get_price_mart/flows/: get_price_mart.py
dqx/get_price_mart/infra/: profiles.yml
dqx/get_price_mart/models/: mrt_price_hourly.csv  sources.yaml
dqx/get_price_mart/models/marts/: mrt_price_daily.sql  mrt_price_hourly.sql  mrt_price_short_baseline.sql  schema.yaml
dqx/get_price_mart/models/staging/: schema.yaml  stg_price_hourly.sql
dqx/get_recaptcha_app/: Dockerfile  get_recaptcha_app.py  get_recaptcha_app.yaml  local.conf  selenium_service.yaml
dqx/get_trade_history/: get_trade_history.py
dqx/keepalive_streamlit/: keepalive_streamlit.py
dqx/notify_cookie_expiration/: notify_cookie_expiration.py
dqx/post_diary/: post_diary.py
dqx/show_price_graph/: show_price_graph.py
dqx/sync_supabase_mrt_price_hourly/: sync_supabase_mrt_price_hourly.py
life_dashboard/: .gitignore  Dockerfile  READMe.md  prefect.yaml  pyproject.toml
life_dashboard/ai_feedback/: ai_feedback_flow.py
life_dashboard/asken_exporter/: asken_flow.py  asken_scraper.py
life_dashboard/asken_exporter/sql/: create_external.sql
life_dashboard/aw/: Dockerfile  as_sync.py  manifest.yaml  sync_android.py
life_dashboard/aw_exporter/: aw_flow.py  aw_scraper.py
life_dashboard/aw_exporter/sql/: create_external.sql
life_dashboard/common/: compaction_flow.py  storage_tasks.py  trino_api.py  trino_tasks.py
life_dashboard/dbt_lifeos/: .user.yml  dbt_flow.py  dbt_project.yml  enrich_places_flow.py  main_data_flow.py  profiles.yml
life_dashboard/dbt_lifeos/models/: sources.yml
life_dashboard/dbt_lifeos/models/gold/: location_routes.sql  location_stays.sql  mrt_asken.sql  mrt_aw_daily_work_summary.sql  mrt_behavior_slots_15m.sql  mrt_fitness_daily_summary.sql  schema.yml  (+2 more)
life_dashboard/fitbit/: fitbit.json  get_fitbit_token.py  ingest_fitbit.py
life_dashboard/fitbit_exporter/: fitbit_flow.py  fitbit_scraper.py  get_fitbit_token.py
life_dashboard/fitbit_exporter/sql/: create_external.sql
life_dashboard/owntracks_exporter/: owntracks_flow.py
life_dashboard/owntracks_exporter/sql/: create_external.sql
life_dashboard/timeline_exporter/: README.md  export_timeline.py  geocode_flow.py  geocode_places.py  setup.sh  sync_timeline.py  timeline_flow.py  timeline_partition_flow.py
life_dashboard/timeline_exporter/sql/: add_route_points_column.sql  create_external.sql  create_place_cache.sql
(+18 files in other folders)
