[project]
name = "dqx"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "mechanize>=0.4.8",
    "selenium>=4.4.3",
    "openpyxl>=3.0.10",
    "pandas>=2.1.2",
    "numpy>=1.26.1",
    "prefect-dask>=0.2.6",
    "psycopg2-binary>=2.8.6",
    "selenium-wire>=5.1.0",
    "griffe>=1.5.1",
    "flask>=3.0.3",
    "webdriver-manager>=4.0.2",
    "minio>=7.2.12",
    "pyarrow>=18.1.0",
    "trino>=0.331.0",
    "prefect>=3.1.11",
    "prefect-docker>=0.6.2",
    "docker>=7.1.0",
    "discord>=2.3.2",
    "seaborn>=0.13.2",
    "japanize-matplotlib>=1.1.3",
    "plotly>=5.24.1",
    "kaleido==0.2.1",
    "dbt-core>=1.10.9",
    "dbt-trino>=1.9.3",
    "prefect-dbt>=0.7.6",
    "supabase>=2.21.1",
    "realtime>=1.0.0,<3.0.0",
    "supabase-auth>=2.24.0",
    "beautifulsoup4>=4.12.0",
]

[dependency-groups]
dev = [
    "ipython>=8.16.1",
    "ipykernel>=6.15.2",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
