[project]
name = "life-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "tig0826",email = "tigcr0826@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython (>=9.7.0,<10.0.0)",
    "fitbit (>=0.3.1,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
